k8s/websocket.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket
  labels:
    app: websocket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websocket
  template:
    metadata:
      labels:
        app: websocket
    spec:
      containers:
      - name: websocket
        image: websocket:1.0.0-spring
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: websocket-service
spec:
  selector:
    app: websocket
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 8080
