k8s/websocket-ingress.yaml
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: websocket-ingress
#  namespace: default
#spec:
#  rules:
#    - host: websocket.com
#      http:
#        paths:
#          - backend:
#              serviceName: websocket-service
#              servicePort: 8080
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: websocket-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: websocket.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: websocket-service
                port:
                  number: 8080
